# chickenscratch

./: .eslintrc.js  Dockerfile  Favicon.ai  LICENSE  README.md  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
.devcontainer/: devcontainer.json
components/: card.tsx  footer.tsx  nav.tsx  search.tsx  toast.tsx
components/document/: sidebar.tsx  titlebar.tsx
pages/: _app.tsx  home.tsx  index.tsx  login.tsx
pages/api/: login.ts  logout.ts
pages/d/[document]/: edit.tsx  index.tsx
pages/login/: index.tsx
server/: Cargo.toml
shared/: cookies.ts  hooks.ts
src/components/: card.tsx  error.tsx  footer.tsx  loader.tsx  nav.tsx  search.tsx  skeleton.tsx  slideover.tsx  toast.tsx
src/components/document/: editor.tsx  preview.tsx  sidebar.tsx  titlebar.tsx
src/interfaces/: collaborator.ts  document.ts  file.ts  folder.ts  user.ts
src/pages/: 404.tsx  _app.tsx  _error.tsx  about.tsx  home.tsx  index.tsx  login.tsx  onboarding.tsx
src/pages/api/: home.ts  login.ts  logout.ts  user.ts
src/pages/d/: new.tsx
src/pages/u/: [user].tsx
src/shared/: cookies.ts  db.ts  error.ts  hooks.ts  magic.ts  mongo.ts
src/styles/: index.css
styles/: index.css
webapp/: .eslintrc.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
webapp/src/components/: card.tsx  footer.tsx  nav.tsx  search.tsx  skeleton.tsx  slideover.tsx
webapp/src/interfaces/: document.ts  user.ts
webapp/src/pages/: home.tsx  index.tsx  landing.tsx  login.tsx
webapp/src/shared/: cookies.ts  error.ts  (+3 more)
(+49 files in other folders)
