[package]
name = "chickenscratch-server"
version = "0.1.0"
authors = ["Kalissaac <noreply@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["full"] }
warp = "0.3"
mongodb = "2.0.0-beta.1"
